--- a/inventory/hosts.ini
+++ b/inventory/hosts.ini
@@ -1,22 +1,22 @@
 [local]
 localhost ansible_connection=local
 
-[cisco_voice_servers]
-cucm-pub ansible_host=10.1.128.14
-cucm-sub ansible_host=10.1.128.15
-im-presence-pub ansible_host=10.1.128.20
-im-presence-sub ansible_host=10.1.128.21
+#[cisco_voice_servers]
+#cucm-pub ansible_host=10.1.128.14
+#cucm-sub ansible_host=10.1.128.15
+#im-presence-pub ansible_host=10.1.128.20
+#im-presence-sub ansible_host=10.1.128.21
 
-[cucm_servers]
-cucm-pub ansible_host=10.1.128.14
-cucm-sub ansible_host=10.1.128.15
+#[cucm_servers]
+#cucm-pub ansible_host=10.1.128.14
+#cucm-sub ansible_host=10.1.128.15
 
-[im_presence_servers]
-im-presence-pub ansible_host=10.1.128.20
-im-presence-sub ansible_host=10.1.128.21
+#[im_presence_servers]
+#im-presence-pub ansible_host=10.1.128.20
+#im-presence-sub ansible_host=10.1.128.21
 
-[cisco_voice_servers:vars]
+#[cisco_voice_servers:vars]
 # Common variables for Cisco voice servers
-ansible_user=administrator
-ansible_connection=ssh
-ansible_ssh_common_args='-o StrictHostKeyChecking=no'
+#ansible_user=administrator
+#ansible_connection=ssh
+#ansible_ssh_common_args='-o StrictHostKeyChecking=no'
